--- a/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR/Components/Pages/Home.razor
+++ b/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR/Components/Pages/Home.razor
@@ -2,18 +2,28 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Blazor8 with Roles and SignalR</h1>
 
-Welcome to your new Fluent Blazor app.
-<br />
-Moderator Role: 
-<AuthorizeView Roles="Moderator">
-    <Authorized>Yes</Authorized>
-    <NotAuthorized>No</NotAuthorized>
-</AuthorizeView>
-<br />
-Administrator Role:
-<AuthorizeView Roles="Administrator">
-    <Authorized>Yes</Authorized>
-    <NotAuthorized>No</NotAuthorized>
+This app demonstrates User roles with persistence to the client.<br />
+
+<AuthorizeView Context="outer">
+    <NotAuthorized>
+        Don't forget to "Update-Database" to run the migrations.<br />
+        Seeded User:<br />
+        bob@bob.com  [Pass123$]
+    </NotAuthorized>
+    <Authorized>
+        <br />
+        Moderator Role:
+        <AuthorizeView Roles="Moderator">
+            <Authorized>Yes</Authorized>
+            <NotAuthorized>No</NotAuthorized>
+        </AuthorizeView>
+        <br />
+        Administrator Role:
+        <AuthorizeView Roles="Administrator">
+            <Authorized>Yes</Authorized>
+            <NotAuthorized>No</NotAuthorized>
+        </AuthorizeView>
+    </Authorized>
 </AuthorizeView>
