--- a/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR.Client/Layout/NavMenu.razor
+++ b/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR.Client/Layout/NavMenu.razor
@@ -11,7 +11,13 @@
         <FluentNavMenu Id="main-menu" Width="250" Collapsible="true" Title="Navigation menu" @bind-Expanded="expanded">
             <FluentNavLink Href="/" Match="NavLinkMatch.All" Icon="@(new Icons.Regular.Size20.Home())" IconColor="Color.Accent">Home</FluentNavLink>
             <FluentNavLink Href="counter" Icon="@(new Icons.Regular.Size20.NumberSymbolSquare())" IconColor="Color.Accent">Counter</FluentNavLink>
-            <FluentNavLink Href="chat" Icon="@(new Icons.Regular.Size20.Chat())" IconColor="Color.Accent">Chat</FluentNavLink>
+            <AuthorizeView>
+                <FluentNavLink Href="chat" 
+                               Icon="@(new Icons.Regular.Size20.Chat())" 
+                               IconColor="Color.Accent">
+                    Chat
+                </FluentNavLink>
+            </AuthorizeView>
             <FluentNavLink Href="weather" Icon="@(new Icons.Regular.Size20.WeatherPartlyCloudyDay())" IconColor="Color.Accent">Weather</FluentNavLink>
             <FluentNavLink Href="auth" Icon="@(new Icons.Regular.Size20.LockClosedKey())" IconColor="Color.Accent">Auth Required</FluentNavLink>
             <AuthorizeView>
