--- a/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR.Client/Pages/Chat.razor
+++ b/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR.Client/Pages/Chat.razor
@@ -1,6 +1,9 @@
 ﻿@page "/chat"
 @rendermode InteractiveAuto
+
 @using Microsoft.AspNetCore.SignalR.Client
+
+@attribute [Authorize]
 @inject NavigationManager Navigation
 @implements IAsyncDisposable
 
