--- a/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR/Components/App.razor
+++ b/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR/Components/App.razor
@@ -13,7 +13,15 @@
 
 <body>
     <Routes />
+    <FluentDesignTheme @bind-Mode="@Mode" @bind-OfficeColor="@OfficeColor" StorageName="theme" />
     <script src="_framework/blazor.web.js"></script>
+    <!-- Set the default theme -->
+    <script src="_content/Microsoft.FluentUI.AspNetCore.Components/js/loading-theme.js" type="text/javascript"></script>
+    <loading-theme storage-name="theme"></loading-theme>
 </body>
 
 </html>
+@code {
+    public DesignThemeModes Mode { get; set; } = DesignThemeModes.Light;
+    public OfficeColor? OfficeColor { get; set; } = Microsoft.FluentUI.AspNetCore.Components.OfficeColor.Outlook;
+}
