--- a/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR/Components/Layout/MainLayout.razor
+++ b/Blazor8WithRolesAndSignalR/Blazor8WithRolesAndSignalR/Components/Layout/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 <FluentLayout>
     <FluentHeader>
-        Blazor8WithRolesAndSignalR
+        Blazor8 Roles &amp SignalR
     </FluentHeader>
     <FluentStack Class="main" Orientation="Orientation.Horizontal" Width="100%">
         <NavMenu />
